trazendo os áudios para constantes JavaScript, adicionando EventListener e criando as funções responsáveis por tocar o áudio e mudar o estilo do botão

--- a/index.html
+++ b/index.html
@@ -23,13 +23,27 @@
     <h2>Henrique Melo</h2>
 
     <div class="notas-musicais">
-      <button class="nota-musical-do">DÓ</button>
-      <button class="nota-musical-re">RÉ</button>
-      <button class="nota-musical-mi">MI</button>
-      <button class="nota-musical-fa">FÁ</button>
-      <button class="nota-musical-sol">SOL</button>
-      <button class="nota-musical-la">LÁ</button>
-      <button class="nota-musical-si">SI</button>
+      <button class="nota-musical-do button-style">DÓ</button>
+      <audio class="audio-do" src="audios/audio-do.wav"></audio>      
+
+      <button class="nota-musical-re button-style">RÉ</button>
+      <audio class="audio-re" src="audios/audio-re.wav"></audio>
+
+      <button class="nota-musical-mi button-style">MI</button>
+      <audio class="audio-mi" src="audios/audio-mi.wav"></audio>
+
+      <button class="nota-musical-fa button-style">FÁ</button>
+      <audio class="audio-fa" src="audios/audio-fa.wav"></audio>
+
+      <button class="nota-musical-sol button-style">SOL</button>
+      <audio class="audio-sol" src="audios/audio-sol.wav"></audio>
+
+      <button class="nota-musical-la button-style">LÁ</button>
+      <audio class="audio-la" src="audios/audio-la.wav"></audio>
+
+      <button class="nota-musical-si button-style">SI</button>
+      <audio class="audio-si" src="audios/audio-si.wav"></audio>
+
     </div>
 
   </main>
